--- a/flores.css
+++ b/flores.css
@@ -53,12 +53,12 @@ body {
 .message {
   background: #fce700;
   white-space: normal;
+  text-align: center;
   bottom: 50px;
   font-family: "Poppins", sans-serif;
   font-size: 40px;
   font-style: normal;
   font-weight: 800;
-  /* height: 60px; */
   line-height: 1.2;
   padding: 10px;
   position: absolute;
